RESOLVED FIXED267595
REGRESSION (273059@main-273058@main?): [ Sonoma IOS 17 Debug ] ASSERTION FAILED in virtual WebCore::GraphicsContext::~GraphicsContext() for imported/w3c/web-platform-tests/html/browsers/the-window-object/open-close/open-features-tokenization-noopener.html
https://bugs.webkit.org/show_bug.cgi?id=267595
Summary REGRESSION (273059@main-273058@main?): [ Sonoma IOS 17 Debug ] ASSERTION FAIL...
Jay Stfleur
Reported 2024-01-16 11:03:54 PST
Created attachment 469417 [details] crash log Description: imported/w3c/web-platform-tests/html/browsers/the-window-object/open-close/open-features-tokenization-noopener.html Is a constant crash on macOS Sonoma ToT and IOS 17 Debug since 273058@main. I was not able to reproduce the crash by downloading the spade. The suspected changes are 273059@main and 273058@main This issue can be reproduce using this command: run-webkit-tests --root --exit-after-n-failures 1 --debug <test> History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fbrowsers%2Fthe-window-object%2Fopen-close%2Fopen-features-tokenization-noopener.html&style=debug&version_name=iOS%2017&version_name=Sonoma Diff/Image Diff/Crash Log: ASSERTION FAILED: m_stack.isEmpty() /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebCore/platform/graphics/GraphicsContext.cpp(63) : virtual WebCore::GraphicsContext::~GraphicsContext() 1 0x1084ca998 WTFCrash 2 0x2c61a3470 WebCore::BaseAudioContext::currentSampleFrame() const 3 0x2c827e788 WebCore::GraphicsContext::~GraphicsContext() 4 0x2c8409fbc WebCore::GraphicsContextCG::~GraphicsContextCG() 5 0x2c8409fe8 WebCore::GraphicsContextCG::~GraphicsContextCG() 6 0x2c840a014 WebCore::GraphicsContextCG::~GraphicsContextCG() 7 0x2c8432ae4 std::__1::default_delete<WebCore::GraphicsContextCG>::operator()[abi:v160006](WebCore::GraphicsContextCG*) const 8 0x2c8432a50 std::__1::unique_ptr<WebCore::GraphicsContextCG, std::__1::default_delete<WebCore::GraphicsContextCG>>::reset[abi:v160006](WebCore::GraphicsContextCG*) 9 0x2c8434c90 std::__1::unique_ptr<WebCore::GraphicsContextCG, std::__1::default_delete<WebCore::GraphicsContextCG>>::operator=[abi:v160006](std::nullptr_t) 10 0x2c8434c50 WebCore::ImageBufferIOSurfaceBackend::releaseGraphicsContext() 11 0x2c8434108 WebCore::ImageBufferIOSurfaceBackend::~ImageBufferIOSurfaceBackend() 12 0x13abdba6c WebKit::ImageBufferShareableMappedIOSurfaceBackend::~ImageBufferShareableMappedIOSurfaceBackend() 13 0x13abdba34 WebKit::ImageBufferShareableMappedIOSurfaceBackend::~ImageBufferShareableMappedIOSurfaceBackend() 14 0x13bfb9c14 WebKit::ImageBufferShareableMappedIOSurfaceBackend::~ImageBufferShareableMappedIOSurfaceBackend() 15 0x2c59330fc std::__1::default_delete<WebCore::ImageBufferBackend>::operator()[abi:v160006](WebCore::ImageBufferBackend*) const 16 0x2c5933068 std::__1::unique_ptr<WebCore::ImageBufferBackend, std::__1::default_delete<WebCore::ImageBufferBackend>>::reset[abi:v160006](WebCore::ImageBufferBackend*) 17 0x2c5932ff0 std::__1::unique_ptr<WebCore::ImageBufferBackend, std::__1::default_delete<WebCore::ImageBufferBackend>>::~unique_ptr[abi:v160006]() 18 0x2c5932b80 std::__1::unique_ptr<WebCore::ImageBufferBackend, std::__1::default_delete<WebCore::ImageBufferBackend>>::~unique_ptr[abi:v160006]() 19 0x2c82aa664 WebCore::ImageBuffer::~ImageBuffer() 20 0x2c82aa69c WebCore::ImageBuffer::~ImageBuffer() 21 0x2c82aa6c8 WebCore::ImageBuffer::~ImageBuffer() 22 0x139dd5e60 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::ImageBuffer, (WTF::DestructionThread)0>() const::'lambda'()::operator()() const 23 0x13a7f2670 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::ImageBuffer, (WTF::DestructionThread)0>() const 24 0x139dd5de0 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::ImageBuffer, (WTF::DestructionThread)0>::deref() const 25 0x13a05fcd0 WTF::DefaultRefDerefTraits<WebCore::ImageBuffer>::derefIfNotNull(WebCore::ImageBuffer*) 26 0x13a05fc90 WTF::RefPtr<WebCore::ImageBuffer, WTF::RawPtrTraits<WebCore::ImageBuffer>, WTF::DefaultRefDerefTraits<WebCore::ImageBuffer>>::~RefPtr() 27 0x13a05faf4 WTF::RefPtr<WebCore::ImageBuffer, WTF::RawPtrTraits<WebCore::ImageBuffer>, WTF::DefaultRefDerefTraits<WebCore::ImageBuffer>>::~RefPtr() 28 0x13abb3908 WebKit::RemoteImageBufferSet::~RemoteImageBufferSet() 29 0x13abb3948 WebKit::RemoteImageBufferSet::~RemoteImageBufferSet() 30 0x13abb3974 WebKit::RemoteImageBufferSet::~RemoteImageBufferSet() 31 0x13a7f24dc WTF::ThreadSafeRefCounted<IPC::StreamMessageReceiver, (WTF::DestructionThread)0>::deref() const::'lambda'()::operator()() const com.apple.WebKit.GPU.Development terminated (pid 7226) for reason: crash
Attachments
crash log (3.55 KB, text/plain)
2024-01-16 11:03 PST, Jay Stfleur
no flags
Radar WebKit Bug Importer
Comment 1 2024-01-16 11:04:32 PST
Jay Stfleur
Comment 2 2024-01-16 14:15:26 PST
EWS
Comment 3 2024-01-16 14:23:22 PST
Test gardening commit 273097@main (5dbfcf890bd3): <https://commits.webkit.org/273097@main> Reviewed commits have been landed. Closing PR #22835 and removing active labels.
Matt Woodrow
Comment 4 2024-01-16 17:44:54 PST
EWS
Comment 5 2024-01-17 13:40:58 PST
Committed 273141@main (15c2dd6a0dd3): <https://commits.webkit.org/273141@main> Reviewed commits have been landed. Closing PR #22843 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.