REGRESSION (273059@main-273058@main?): [ Sonoma IOS 17 Debug ] ASSERTION FAILED in virtual WebCore::GraphicsContext::~GraphicsContext() for imported/w3c/web-platform-tests/html/browsers/the-window-object/open-close/open-features-tokenization-noopener.html https://bugs.webkit.org/show_bug.cgi?id=267595 <rdar://121063604>

Reviewed by Kimmo Kinnunen.

Ensure that we restore any saved state when releasing a RemoteImageBufferSet.

This can happen during test when we destroy a RemoteRenderingBackend in the middle of drawing,
and is the same as we already do for RemoteImageBuffer.

* LayoutTests/platform/ios-wk2/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
(WebKit::RemoteImageBufferSet::~RemoteImageBufferSet):

Canonical link: https://commits.webkit.org/273141@main